--- a/app/views/admin/accounts/_account.html.erb
+++ b/app/views/admin/accounts/_account.html.erb
@@ -7,7 +7,7 @@
         <div class="listing-i-fs"><%= account.groups.count %></div>
         <div class="listing-i-fs"><%= account.account_incivents.count %></div>
         <div class="listing-i-fs"><%= account.account_tasks.count %></div>
-        <div class="listing-i-fs"><%= account.account_messages.count %></div>
+        <div class="listing-i-fs"><%= account.account_stories.count %></div>
         <div class="listing-i-f"><%= link_to 'Edit', edit_admin_account_path(account) %> - <%= link_to 'Delete', account, method: :delete, url: admin_account_path(account) %></div>
         <br class="clear" />
     </div>
