--- a/app/views/admin/accounts/index.html.erb
+++ b/app/views/admin/accounts/index.html.erb
@@ -19,7 +19,7 @@
     <div class="listing-i-fs">Groups:</div>
     <div class="listing-i-fs">Events:</div>
     <div class="listing-i-fs">Tasks:</div>
-    <div class="listing-i-fs">Messages:</div>
+    <div class="listing-i-fs">Stories:</div>
     <br class="clear"/>
   </div>
 </div>
