--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -41,7 +41,7 @@
     </div>
 
     <div class="feature-heading">
-      <h1>A web and mobile tool used to manage and report the "on the ground" operations reality through tasks, messages and events.</h1>
+      <h1>A web and mobile tool used to manage and report the "on the ground" operations reality through tasks, stories and events.</h1>
     </div>
 
     <div class="spacer">
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="feature-block even">
-        All users can create and see group-based messages, events and tasks
+        All users can create and see group-based stories, events and tasks
       </div>
       <div class="feature-block even">
         Import kml files with geolocated features for each group
@@ -87,7 +87,7 @@
     <div>
     <div class="feature-row">
       <div class="feature-block">
-        Automatic geolocation of messages, events and tasks based on a simple 'location' field
+        Automatic geolocation of stories, events and tasks based on a simple 'location' field
       </div>
       <div class="feature-block dotted-right">
         <div class="feature-image">
@@ -127,7 +127,7 @@
     </div>
     <div class="feature-row">
       <div class="feature-block">
-        SMS-in functionality for both events and messages in a simple format (coming soon)
+        SMS-in functionality for both events and stories in a simple format (coming soon)
       </div>
       <div class="feature-block dotted-right">
         <div class="feature-image">
