--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -2,12 +2,12 @@
 </div>
 
 <div class="heading-block">
-  <h2>New message</h2>
+  <h2>Edit this story</h2>
 </div>
 
 <div class="spacer">
 </div>
 
 <div class="general-form">
-  <%= render 'messages/form_fields' %>
+  <%= render 'stories/form_fields' %>
 </div>
