--- a/app/views/tasks/_form_fields.html.erb
+++ b/app/views/tasks/_form_fields.html.erb
@@ -9,7 +9,7 @@
     <%= f.input :latitude %>
     <%= f.input :longitude %>
     <%= f.input :due_date, as: :string %>
-    <%= f.input :task_image, as: :file, label: "Task Image" %>
+    <%= f.input :task_image, as: :file, label: "Task image" %>
     <%= f.input :complete, label: "Complete this task" %>
     <%= f.input :archive, label: "Archive this task" %>
     <%= f.input :raised_user_id, as: :hidden %>
