--- a/app/views/tasks/index.mobile.erb
+++ b/app/views/tasks/index.mobile.erb
@@ -22,19 +22,19 @@
 <div class="spacer"></div>
 
 <div class="mobile-heading-block">
-    <h2>Report In</h2>
+    <h2>Report in</h2>
 </div>
 
 <div class="mt-item">
   <div class="mt-buttons">
     <a href="#">
-      <div class="mt-button-i">New Event</div>
+      <div class="mt-button-i">New event</div>
     </a>
     <a href="#">
-      <div class="mt-button-t">New Task</div>
+      <div class="mt-button-t">New task</div>
     </a>
     <a href="#">
-      <div class="mt-button-m">New Message</div>
+      <div class="mt-button-m">New story</div>
     </a>
   </div>
 </div>
