--- a/app/views/incivents/_form_fields.html.erb
+++ b/app/views/incivents/_form_fields.html.erb
@@ -4,13 +4,13 @@
     <%= f.input :priority, collection: @account.priorities, member_label: :description, include_blank: false %>
     <%= f.input :status, collection: @account.statuses, member_label: :description, include_blank: false %>
     <%= f.input :location, hint: "You must enter either an address OR latitude and longitude as decimal degrees" %>
-    <%= f.input :type, collection: @account.types.where(usage: 'Event category'), member_label: :description, include_blank: false %>
+    <%= f.input :type, collection: @account.types.where(usage: Type::USAGES[:event_category]), member_label: :description, include_blank: false %>
     <%= f.input :description %>
     <%= f.input :group, collection: current_user.groups, member_label: :name, include_blank: false %>
     <%= f.input :latitude %>
     <%= f.input :longitude %>
-    <%= f.input :incivent_image, as: :file, label: "Event Image" %>
-    <%= f.input :archive, label: "Archive this Event" %>
+    <%= f.input :incivent_image, as: :file, label: "Event image" %>
+    <%= f.input :archive, label: "Archive this event" %>
   <% end %>
   <%= f.actions do %>
     <%= f.action :submit, as: :button, label: 'Submit' %>
