--- a/app/views/launch_interests/index.html.erb
+++ b/app/views/launch_interests/index.html.erb
@@ -2,7 +2,7 @@
 </div>
 
 <div class="heading-block">
-  <h2>Messages</h2>
+  <h2>Stories</h2>
 </div>
 
 <div class="spacer">
@@ -18,7 +18,7 @@
   <div class="listing">
     <div class="listing-header">
       <div class="listing-i-fm">Email:</div>
-      <div class="listing-i-fxl">Message:</div>
+      <div class="listing-i-fxl">Story:</div>
       <br class="clear"/>
     </div>
   </div>
