--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -44,7 +44,7 @@
                   <li><%= link_to "Dashboard", groups_path %></li>
                   <li><%= link_to "Events", incivents_path %></li>
                   <li><%= link_to "Tasks", tasks_path %></li>
-                  <li><%= link_to "Messages", messages_path %></li>
+                  <li><%= link_to "Stories", stories_path %></li>
                   <% if current_user.master_user? %>
                     <li><%= link_to "Users", users_path %></li>
                   <% else %>
