--- a/app/views/notification/notify_message.text.erb
+++ b/app/views/notification/notify_message.text.erb
@@ -1,9 +1,9 @@
 Hi <%= @user.first_name %>,
 
-A new message has been added in the group '<%= @group.name %>' of which you are a member.
+A new story has been added in the group '<%= @group.name %>' of which you are a member.
 Please click on the hyperlink below for more details:
 
-<%= @message_url %>
+<%= @story_url %>
 
 Kind regards,
 The ImpactReady Team
