--- a/app/views/stories/_story_show_detail.html.erb
+++ b/app/views/stories/_story_show_detail.html.erb
@@ -1,4 +1,4 @@
-<div class="index-wrapper">
+]<div class="index-wrapper">
   <div class="index-listing">
     <div class="item-table">
       <table>
@@ -8,39 +8,39 @@
         </tr>
         <tr class="listing-item">
           <td class="listing-i-i">Description:</td>
-          <td><%= @message.description %></td>
+          <td><%= @story.description %></td>
         </tr>
         <tr class="listing-item">
           <td class="listing-i-i">Raised by:</td>
-          <% if current_user?(@message.user) %>
+          <% if current_user?(@story.user) %>
             <td>You</td>
           <% else %>
-            <td><%= @message.user.full_name %></td>
+            <td><%= @story.user.full_name %></td>
           <% end %>
         </tr>
         <tr class="listing-item">
           <td class="listing-i-i">Raised:</td>
-          <td><%= time_ago_in_words(@message.created_at) %> ago</td>
+          <td><%= time_ago_in_words(@story.created_at) %> ago</td>
         </tr>
         <tr class="listing-item">
           <td class="listing-i-i">Location:</td>
-          <% if @message.location == "" %>
+          <% if @story.location == "" %>
             <td>Unnamed Coordinates</td>
           <% else %>
-            <td><%= @message.location %></td>
+            <td><%= @story.location %></td>
           <% end %>
         </tr>
         <tr class="listing-item">
           <td class="listing-i-i">Group:</td>
-          <td><%= @message.group.name %></td>
+          <td><%= @story.group.name %></td>
         </tr>
         <tr class="listing-item">
           <td class="listing-i-i">Coordinates - Latitude:</td>
-          <td><%= @message.latitude %></td>
+          <td><%= @story.latitude %></td>
         </tr>
         <tr class="listing-item">
           <td class="listing-i-i">Coordinates - Longitude:</td>
-          <td><%= @message.longitude %></td>
+          <td><%= @story.longitude %></td>
         </tr>
       </table>
     </div>
