--- a/app/views/stories/new.mobile.erb
+++ b/app/views/stories/new.mobile.erb
@@ -1,10 +1,11 @@
 <div class="mobile-heading-block">
-    <h2>New message</h2>
+    <h2>New story</h2>
 </div>
 <div class="mobile-form">
-  <%= semantic_form_for @message do |f| %>
+  <%= semantic_form_for @story do |f| %>
     <%= f.inputs do %>
       <%= f.input :description %>
+      <%= f.input :type, label: "Domain of change" , collection: @account.types.where(usage: Type::USAGES[:domain_of_change]), member_label: :description, include_blank: false %>
       <%= f.input :location %>
       <%= f.input :group, collection: current_user.groups, member_label: :name, include_blank: false %>
       <%= f.input :latitude %>
