--- a/app/views/types/_form_fields.html.erb
+++ b/app/views/types/_form_fields.html.erb
@@ -2,7 +2,7 @@
   <%= f.inputs do %>
     <%= f.input :description %>
     <%= f.input :account_id, as: :hidden %>
-    <%= f.input :usage, collection: ['Event category', 'Measurement indicator'] %>
+    <%= f.input :usage, collection: Type::USAGES.values %>
   <% end%>
   <%= f.actions do %>
     <%= f.action :submit, as: :button, label: 'Submit' %>
