--- a/app/views/stories/_story_show_detail.html.erb
+++ b/app/views/stories/_story_show_detail.html.erb
@@ -1,4 +1,4 @@
-]<div class="index-wrapper">
+<div class="index-wrapper">
   <div class="index-listing">
     <div class="item-table">
       <table>
