Allmost done with the measurements.

--- a/app/assets/stylesheets/_google_photos.css.scss
+++ b/app/assets/stylesheets/_google_photos.css.scss
@@ -39,6 +39,11 @@ div.label-task {
     background-color: #ffe956;
 }
 
+div.label-measurement {
+    background-color: #228B22;
+}
+
+
 div.label-content {
     padding: 1px 2px;
     text-align: left;
