--- a/app/views/incivents/new.mobile.erb
+++ b/app/views/incivents/new.mobile.erb
@@ -13,7 +13,7 @@
       <%= f.input :group, collection: current_user.groups, member_label: :name, include_blank: false %>
       <%= f.input :latitude %>
       <%= f.input :longitude %>
-      <%= f.input :incivent_image, as: :file, label: "Event Image"%>
+      <%= f.input :incivent_image, as: :file, label: "Event image"%>
     <% end %>
     <%= f.actions do %>
       <%= f.action :submit, as: :button, label: 'Submit' %>
