--- a/app/views/measurements/_search_form.html.erb
+++ b/app/views/measurements/_search_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag incivents_path, method: 'get' do %>
+<%= form_tag measurements_path, method: 'get' do %>
     <%= text_field_tag :search, params[:search] %>
     <%= submit_tag "Search" %>
 <% end %>
