--- a/app/views/admin/accounts/index.html.erb
+++ b/app/views/admin/accounts/index.html.erb
@@ -18,6 +18,7 @@
     <div class="listing-i-fs">Users:</div>
     <div class="listing-i-fs">Groups:</div>
     <div class="listing-i-fs">Events:</div>
+    <div class="listing-i-f">Indicator measurements:</div>
     <div class="listing-i-fs">Tasks:</div>
     <div class="listing-i-fs">Stories:</div>
     <br class="clear"/>
