Added cosmetic changes to the account management tab.

--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -24,8 +24,8 @@
     <table>
       <tr class="listing-header">
         <td class="listing-i-fm">Description:</td>
-        <td></td>
-        <td></td>
+        <td>Usage:</td>
+        <td colspan="2"></td>
       </tr>
       <% @types.each do |type| %>
         <tr class="listing-item">
