--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -64,9 +64,8 @@
   <div class="admin-column">
     <p class="normal"><strong>Event Classification</strong></p>
     <p class="normal"><%= link_to "Manage priority options", priorities_path %></p>
-    <p class="normal"><%= link_to "Manage types", types_path %></p>
+    <p class="normal"><%= link_to "Manage categories / domains / indicators", types_path %></p>
     <p class="normal"><%= link_to "Manage statuses", statuses_path %></p>
-    <p class="normal"><%= link_to "Manage indicators", indicators_path %></p>
   </div>
 
   <div class="admin-column">
