--- a/app/views/measurements/edit.html.erb
+++ b/app/views/measurements/edit.html.erb
@@ -2,7 +2,7 @@
 </div>
 
 <div class="heading-block">
-  <h2>Edit this indicator measurement</h2>
+  <h2>Edit this indicator update</h2>
 </div>
 
 <div class="spacer">
