--- a/app/views/notification/notify_incivent.text.erb
+++ b/app/views/notification/notify_incivent.text.erb
@@ -1,6 +1,6 @@
 Hi <%= @user.first_name %>,
 
-A new event has been added in the group '<%= @group.name %>' of which you are a member.
+A new event has been added in the team '<%= @group.name %>' of which you are a member.
 Please click on the hyperlink below for more details:
 
 <%= @incivent_url %>
