--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -49,7 +49,7 @@
 
     <div class="feature-row">
       <div class="feature-block">
-        Create functional groups and allocate users to multiple groups
+        Create functional teams and allocate users to multiple teams
       </div>
       <div class="feature-block dotted-right">
         <div class="feature-image">
@@ -73,10 +73,10 @@
         </div>
       </div>
       <div class="feature-block even">
-        All users can create and see group-based stories, events and tasks
+        All users can create and see team-based stories, events and tasks
       </div>
       <div class="feature-block even">
-        Import kml files with geolocated features for each group
+        Import kml files with geolocated features for each team
       </div>
       <div class="feature-block even">
         <div class="feature-image">
@@ -140,7 +140,7 @@
         </div>
       </div>
       <div class="feature-block">
-        SMS Notifications to group members (coming soon)
+        SMS Notifications to team members (coming soon)
       </div>
       <div class="clear"></div>
     </div>
