--- a/app/views/incivents/_form_fields.html.erb
+++ b/app/views/incivents/_form_fields.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :location, hint: "You must enter either an address OR latitude and longitude as decimal degrees" %>
     <%= f.input :type, collection: @account.types.where(usage: Type::USAGES[:event_category]), member_label: :description, include_blank: false %>
     <%= f.input :description %>
-    <%= f.input :group, collection: current_user.groups, member_label: :name, include_blank: false %>
+    <%= f.input :group, label: 'Team', collection: current_user.groups, member_label: :name, include_blank: false %>
     <%= f.input :latitude %>
     <%= f.input :longitude %>
     <%= f.input :incivent_image, as: :file, label: "Event image" %>
