--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -43,17 +43,17 @@
                 <% if signed_in? %>
                   <li><%= link_to "Dashboard", groups_path %></li>
                   <li><%= link_to "Events", incivents_path %></li>
-                  <li><%= link_to "Indicator measurements", measurements_path %></li>
+                  <li><%= link_to "Indicators", measurements_path %></li>
                   <li><%= link_to "Tasks", tasks_path %></li>
                   <li><%= link_to "Stories", stories_path %></li>
                   <% if current_user.master_user? %>
                     <li><%= link_to "Users", users_path %></li>
                   <% else %>
-                    <li><%= link_to "Fellow members", users_path %></li>
+                    <li><%= link_to "Team members", users_path %></li>
                   <% end %>
                   <li><%= link_to "Edit profile", edit_user_path(current_user) %></li>
                   <% if current_user.master_user? %>
-                    <li><%= link_to "Account management", current_user.account %></li>
+                    <li><%= link_to "Account", current_user.account %></li>
                   <% end %>
                 <% end %>
             </ul>
