--- a/app/views/notification/notify_task.text.erb
+++ b/app/views/notification/notify_task.text.erb
@@ -1,6 +1,6 @@
 Hi <%= @user.first_name %>,
 
-A task has been assigned to you in the group '<%= @group.name %>' of which you are a member.
+A task has been assigned to you in the team '<%= @group.name %>' of which you are a member.
 Please click on the hyperlink below for more details:
 
 <%= @task_url %>
