--- a/app/views/static_pages/service_terms.html.erb
+++ b/app/views/static_pages/service_terms.html.erb
@@ -47,7 +47,7 @@
 		<h3>Changes and Alterations</h3>
 		<p class="normal">As a condition to your use of the Incivent Platform, you agree not to:</p>
 		<ul>
-			<li>upload, post, email, transmit or otherwise make available any information, materials or other content that is illegal, harmful, threatening, abusive, harassing, defamatory, obscene, pornographic, offensive, invades another’s privacy, or promotes bigotry, racism, hatred or harm against any individual or group;</li>
+			<li>upload, post, email, transmit or otherwise make available any information, materials or other content that is illegal, harmful, threatening, abusive, harassing, defamatory, obscene, pornographic, offensive, invades another’s privacy, or promotes bigotry, racism, hatred or harm against any individual or team;</li>
 
 			<li>impersonate any person or entity or falsely state or otherwise misrepresent your affiliation with a person or entity;</li>
 
