--- a/app/views/stories/_form_fields.html.erb
+++ b/app/views/stories/_form_fields.html.erb
@@ -3,7 +3,7 @@
     <%= f.input :description, input_html: { cols: 40, rows: 5 } %>
     <%= f.input :type, label: "Domain of change" , collection: @account.types.where(usage: Type::USAGES[:domain_of_change]), member_label: :description, include_blank: false%>
     <%= f.input :location, hint: "You must enter either an address OR latitude and longitude as decimal degrees" %>
-    <%= f.input :group, collection: current_user.groups, member_label: :name, include_blank: false %>
+    <%= f.input :group, label: 'Team', collection: current_user.groups, member_label: :name, include_blank: false %>
     <%= f.input :latitude %>
     <%= f.input :longitude %>
     <%= f.input :story_image, as: :file, label: "Story image" %>
