--- a/app/views/stories/new.mobile.erb
+++ b/app/views/stories/new.mobile.erb
@@ -7,7 +7,7 @@
       <%= f.input :description %>
       <%= f.input :type, label: "Domain of change" , collection: @account.types.where(usage: Type::USAGES[:domain_of_change]), member_label: :description, include_blank: false %>
       <%= f.input :location %>
-      <%= f.input :group, collection: current_user.groups, member_label: :name, include_blank: false %>
+      <%= f.input :group, label: 'Team', collection: current_user.groups, member_label: :name, include_blank: false %>
       <%= f.input :latitude %>
       <%= f.input :longitude %>
       <%= f.input :user_id, as: :hidden %>
