--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -46,8 +46,8 @@
 
       <table>
         <tr class="listing-header">
-          <td class="listing-i-fd">Description:</td>
-          <td class="listing-i-fb">Location:</td>
+          <td class="listing-i-fd">Description</td>
+          <td class="listing-i-fb">Location</td>
           <td><%= link_to "Raised by", sort_index_tasks_path(sort: "raised_user_id"), remote: true %></td>
           <td><%= link_to "Raised", sort_index_tasks_path(sort: "created_at"), remote: true %></td>
           <td><%= link_to "Priority", sort_index_tasks_path(sort: "priority_id"), remote: true %></td>
