Cosmetic changes done, types updated for better readibility.

--- a/app/views/groups/_group_show.html.erb
+++ b/app/views/groups/_group_show.html.erb
@@ -7,7 +7,7 @@
         <td>Number of events</td>
         <td>Number of tasks</td>
         <td>Number of stories</td>
-        <td>Number of indicator measurements</td>
+        <td>Number of ind. updates</td>
         <td class="listing-i-f">Actions</td>
       </tr>
 
