--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      ImpactReady | Visualised Operations
+      TeamReady | Visualised Operations
     </title>
     <%= csrf_meta_tag %>
     <%= render 'layouts/include' %>
