--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -2,14 +2,14 @@
 </div>
 
 <div class="heading-block">
-  <h2>Type options</h2>
+  <h2>Types / domains / indicators</h2>
 </div>
 
 <div class="spacer">
 </div>
 
 <p class="normal">
-  <%= link_to 'New event type', new_type_path %>
+  <%= link_to 'New item', new_type_path %>
 </p>
 
 <% if @types.count == 0 %>
