--- a/app/views/incivents/new.mobile.erb
+++ b/app/views/incivents/new.mobile.erb
@@ -8,7 +8,7 @@
       <%= f.input :priority, collection: @account.priorities, member_label: :description, include_blank: false %>
       <%= f.input :status, collection: @account.statuses, member_label: :description, include_blank: false %>
       <%= f.input :location %>
-      <%= f.input :type, collection: @account.types, member_label: :description, include_blank: false %>
+      <%= f.input :type, collection: @account.types.where(usage: Type::USAGES[:event_type]), member_label: :description, include_blank: false %>
       <%= f.input :description %>
       <%= f.input :group, label: 'Team', collection: current_user.groups, member_label: :name, include_blank: false %>
       <%= f.input :latitude %>
