--- a/app/views/measurements/_form_fields.html.erb
+++ b/app/views/measurements/_form_fields.html.erb
@@ -1,6 +1,6 @@
 <%= semantic_form_for @measurement, html: {multipart: true} do |f| %>
   <%= f.inputs do %>
-    <%= f.input :type, label: "Indicator", collection: @account.types.where(usage: Type::USAGES[:measurement_indicator]), member_label: :description, include_blank: false %>
+    <%= f.input :type, label: "Indicator", collection: @account.types.where(usage: Type::USAGES[:indicator]), member_label: :description, include_blank: false %>
     <%= f.input :description %>
     <%= f.input :location, hint: "You must enter either an address OR latitude and longitude as decimal degrees" %>
     <%= f.input :group, label: "Team", collection: current_user.groups, member_label: :name, include_blank: false %>
