--- a/app/views/measurements/new.mobile.erb
+++ b/app/views/measurements/new.mobile.erb
@@ -4,7 +4,7 @@
 <div class="mobile-form">
   <%= semantic_form_for @measurement, html: {multipart: true} do |f| %>
     <%= f.inputs do %>
-      <%= f.input :type, label: "Indicator", collection: @account.types.where(usage: Type::USAGES[:measurement_indicator]), member_label: :description, include_blank: false %>
+      <%= f.input :type, label: "Indicator", collection: @account.types.where(usage: Type::USAGES[:indicator]), member_label: :description, include_blank: false %>
       <%= f.input :description %>
       <%= f.input :location %>
       <%= f.input :group, label: 'Team', collection: current_user.groups, member_label: :name, include_blank: false %>
