--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -50,7 +50,7 @@
             <td class="listing-i-fm">Story</td>
             <td>Domain of change</td>
             <td>Location</td>
-            <td><%= link_to "Group", sort_index_stories_path(sort: "group_id"), remote: true %></td>
+            <td><%= link_to "Team", sort_index_stories_path(sort: "group_id"), remote: true %></td>
             <td><%= link_to "Posted by", sort_index_stories_path(sort: "user_id"), remote: true %></td>
             <td><%= link_to "Posted at", sort_index_stories_path(sort: "created_at"), remote: true %></td>
             <td>Image</td>
