Add ordering to updated.

--- a/app/views/groups/_group_show.html.erb
+++ b/app/views/groups/_group_show.html.erb
@@ -54,7 +54,7 @@
     </div>
 
     <div class="general-form-in">
-      <%= render group.updates %>
+      <%= render group.updates.order(created_at: :desc) %>
     </div>
   <% end %>
 
