Updates work nicely, overhaul big piece is done.

--- a/app/assets/stylesheets/_buttons.css.scss
+++ b/app/assets/stylesheets/_buttons.css.scss
@@ -28,3 +28,10 @@ input[type="submit"] {
     border: 1px solid #ddd;
 
 }
+
+.group-section-link {
+    &:hover {
+        background-color: #eee;
+        cursor: pointer
+    }
+}
