--- a/app/assets/stylesheets/_google_photos.css.scss
+++ b/app/assets/stylesheets/_google_photos.css.scss
@@ -69,6 +69,14 @@ div.label-footer {
     box-shadow: 2px 2px 4px #aaa;
 }
 
+
+.feed {
+    float: right;
+    height: 100px;
+    width: 100px;
+}
+
+
 .photo-main {
 }
 
