--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -115,6 +115,10 @@ div.header-main {
     height: 12px;
 }
 
+.right {
+    float: right;
+}
+
 br.clear {
     clear: both;
 }
@@ -155,9 +159,6 @@ br.clear {
 }
 
 .general-form {
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
     -moz-box-shadow: 0px 0px 3px hsla(0,0%,0%,.3);
     -webkit-box-shadow: 0px 0px 3px hsla(0,0%,0%,.3);
     box-shadow: 0px 0px 3px hsla(0,0%,0%,.3);
@@ -180,11 +181,24 @@ br.clear {
     box-shadow: 1px 1px 1px hsla(0,0%,0%,.3);
 }
 
-.update-item {
-    margin: 0 5px 0 5px;
-    border-bottom: 2px solid #ddd;
-    font-size: 13px;
+#group-section-update-feed {
+    padding-top: 10px;
+
+    .update-item {
+        margin: 0 5px 0 5px;
+        border-bottom: 1px solid #ddd;
+        font-size: 13px;
+        div.update-time {
+            margin-top: 10px;
+            time {
+                padding: 5px 10px;
+                background-color: #eee;
+            }
+        }
+    }
+
 }
+
 
 .centered-text {
     width: 550px;
