--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -3,6 +3,7 @@
 <% end %>
 <%= javascript 'googleearth' %>
 <%= javascript 'markerwithlabel' %>
+<%= javascript 'update_feed' %>
 
 <div class="spacer">
 </div>
