--- a/app/views/incivents/_incivent_show_detail.html.erb
+++ b/app/views/incivents/_incivent_show_detail.html.erb
@@ -60,7 +60,7 @@
   </div>
   <div class="index-item-image">
     <div class="general-form">
-      <% if @incivent.incivent_image %>
+      <% if @incivent.image %>
         <a href="#"><strong>View Image</strong>
           <div>
             <%= image_tag @incivent.incivent_image.url(:medium), class: "photo" %>
