--- a/app/views/measurements/index.html.erb
+++ b/app/views/measurements/index.html.erb
@@ -14,7 +14,7 @@
 <div class="spacer">
 </div>
 
-<p class="normal"><%= link_to 'New indicator update', new_measurement_path %></p>
+<p class="normal"><%= link_to 'New indicator measurement', new_measurement_path %></p>
 
 
 <% if @measurements.empty? %>
