--- a/app/views/measurements/_measurement_show_detail.html.erb
+++ b/app/views/measurements/_measurement_show_detail.html.erb
@@ -51,7 +51,7 @@
   </div>
   <div class="index-item-image">
     <div class="general-form">
-      <% if @measurement.measurement_image %>
+      <% if @measurement.image %>
         <a href="#"><strong>View Image</strong>
           <div>
             <%= image_tag @measurement.measurement_image.url(:medium), class: "photo" %>
