--- a/app/views/stories/_story_show_detail.html.erb
+++ b/app/views/stories/_story_show_detail.html.erb
@@ -45,5 +45,18 @@
       </table>
     </div>
   </div>
+  <div class="index-item-image">
+    <div class="general-form">
+      <% unless @story.image %>
+        <a href="#"><strong>View Image</strong>
+          <div>
+            <%= image_tag @story.story_image.url(:medium), class: "photo" %>
+          </div>
+        </a>
+      <% else %>
+        <strong>No image attached</strong>
+      <% end %>
+    </div>
+  </div>
 
 </div>
