--- a/app/views/tasks/_task_show_detail.html.erb
+++ b/app/views/tasks/_task_show_detail.html.erb
@@ -61,5 +61,17 @@
       </table>
     </div>
   </div>
+  <div class="index-item-image">
+    <div class="general-form">
+      <% if @task.image %>
+        <a href="#"><strong>View Image</strong>
+          <div>
+            <%= image_tag @task.task_image.url(:medium), class: "photo" %>
+          </div>
+        </a>
+      <% else %>
+        <strong>No image attached</strong>
+      <% end %>
+    </div
 
 </div>
