More layout tweaks.

--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -193,6 +193,14 @@ br.clear {
                 background-color: #eee;
             }
         }
+        div.update-image {
+            float: right;
+            width: 100px;
+        }
+
+        div.update-body {
+            width: 780px;
+        }
     }
 
 }
